# tree-sitter-cosmos

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-cosmos.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cosmos/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCosmos/: cosmos.h
bindings/swift/TreeSitterCosmosTests/: TreeSitterCosmosTests.swift
queries/: highlights.scm
queries/cosmos/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: command_modifiers.txt  commands.txt  erb.txt  format.txt  item_modifiers.txt  parameter_modifiers.txt  structures.txt  telemetry.txt  telemetry_modifiers.txt
