[package]
name = "tree-sitter-cosmos"
description = "OpenC3 Cosmos definition parser"
version = "0.1.0"
authors = ["Michael Hegerhorst <michael.hegerhorst@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "cosmos"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/TheMikeste1/tree-sitter-cosmos"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.7"
